TaskDetails.css: title now wraps correctly in Firefox
Contributes to #175

--- a/src/components/Content/RightPanel/TaskDetails/TaskDetails.css
+++ b/src/components/Content/RightPanel/TaskDetails/TaskDetails.css
@@ -65,6 +65,7 @@
 .discuss-task-title {
   font-size: 1.5em;
   color: #fcfcfc;
+  min-width: 0; /* Firefox workaround; see https://github.com/philipwalton/flexbugs/issues/39 */
 }
 
 .task-deliverables-ctn {
